fix-wrap-team-content

--- a/css/styles.css
+++ b/css/styles.css
@@ -391,13 +391,16 @@ img {
 }
 .team-item {
   width: calc((100% - 90px) / 4);
-  padding-bottom: 30px;
 
   border: none;
   border-radius: 0px 0px 4px 4px;
   background: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team-content-wrap {
+  padding: 30px 32px;
 }
 .team-item-title {
   margin-bottom: 10px;
@@ -418,9 +421,8 @@ img {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-.team-item-img {
-  margin-bottom: 30px;
-}
+/* .team-item-img {
+} */
 
 .team-soc-list {
   display: flex;
